# agentshift

./: .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.js  package.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SETUP.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  platform_request.yml
.github/workflows/: agentshift-sync.yml  ci.yml  publish.yml
blog/: 01-migrate-openclaw-to-nemoclaw.md  02-agent-portability-scores.md  03-agents-md-60k-repos.md
docs/: agents-md.md  architecture.md  bedrock.md  claude-code.md  compliance.md  copilot.md  demo.tape  github-action.md  m365.md  migrate.md  nemoclaw.md  vertex.md
examples/: README.md
examples/github-to-bedrock/: README.md  cloudformation.yaml  instruction.txt  openapi.json
examples/github-to-copilot/: README.md  github.agent.md
examples/github-to-m365/: README.md  declarative-agent.json  manifest.json
examples/github-to-vertex/: README.md  agent.json
examples/slack-to-bedrock/: README.md  cloudformation.yaml  instruction.txt  openapi.json
examples/slack-to-copilot/: README.md  slack.agent.md
examples/weather-to-bedrock/: README.md  cloudformation.yaml  openapi.json
examples/weather-to-copilot/: README.md  weather.agent.md
examples/weather-to-vertex/: README.md  agent.json
experiments/: generate_agents.py  generate_behavioral_tests.py  generate_figures.py  run_behavioral_tests.py
experiments/behavioral_tests/: behavioral_results.json  behavioral_tests.json
experiments/results/: audit_results.csv  audit_results.json  ees_summary.json  statistical_tests.json
memory/: 2026-04-03.md
site/: index.html  style.css
specs/: a2a-agent-card-spec.md  agent-portability-format-spec.md  agents-md-format.md  autogen-format.md  bedrock-agent-format.md  bedrock-parser-spec.md  claude-code-format.md  copilot-agent-format.md  copilot-parser-spec.md  crewai-format.md  governance-ir-schema.md  ir-schema.json  ir-schema.md  langgraph-agent-format.md  m365-declarative-agent-format.md  mcp-to-openapi-mapping.md  nemoclaw-format.md  openai-agents-sdk-format.md  openclaw-skill-format.md  persona-sections-schema.md  vertex-ai-agent-format.md  vertex-parser-spec.md
src/agentshift/: __init__.py  __main__.py  cli.py  compliance.py  constraints.py  diff.py  elevation.py  governance_audit.py  init_wizard.py  ir.py  mcp_converter.py  migrator.py  (+4 more)
tests/: smoke_real_skills.py  test_a2a_emitter.py  test_agents_md_parser.py  test_autogen_emitter.py  test_bedrock_emitter.py  test_bedrock_parser.py  test_cli_e2e.py  test_compliance.py  test_copilot_emitter.py  test_copilot_parser.py  test_crewai_parser_emitter.py  test_diff.py  test_diff_json.py  test_edge_cases.py  test_governance_audit.py  test_governance_extraction.py  test_integration.py  test_langgraph_emitter.py  test_langgraph_integration.py  test_m365_emitter.py  test_mcp_converter.py  test_migrator.py  test_nemoclaw_emitter.py  test_openai_agents_emitter.py  test_openclaw_parser.py  test_persona_sections.py  test_persona_sections_diff.py  test_persona_sections_emitters.py  test_persona_sections_parsers.py  test_registry.py  test_roundtrip.py  test_sections.py  test_validators.py  test_vertex_emitter.py  test_vertex_parser.py
(+193 files in other folders)
