[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentshift"
version = "0.1.0"
description = "CLI transpiler for converting AI agents between platforms"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Kranthi Kumar" },
]
keywords = ["ai", "agents", "portability", "transpiler", "openclaw", "copilot", "bedrock"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
agentshift = "agentshift.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agentshift"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
