[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentshift"
version = "0.1.1"
description = "CLI transpiler for converting AI agents between platforms"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Kranthi Kumar" },
]
keywords = ["ai", "agents", "portability", "transpiler", "openclaw", "copilot", "bedrock"]

[project.urls]
Homepage = "https://agentshift.sh"
Documentation = "https://agentshift.sh/docs"
Repository = "https://github.com/ogkranthi/agentshift"
"Bug Tracker" = "https://github.com/ogkranthi/agentshift/issues"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
agentshift = "agentshift.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agentshift"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # typer.Argument/Option in defaults — required by Typer's API
    "TC001",  # move first-party imports into TYPE_CHECKING — needed at runtime
    "TC003",  # move stdlib imports into TYPE_CHECKING — needed at runtime
]

[tool.ruff.lint.isort]
known-first-party = ["agentshift"]
